@@ -46,9 +46,10 @@ around 'markdup_method' => sub {
     $lims or $self->logcroak('lims object is not defined for a product');
     my $lt = $lims->library_type;
     $lt ||= q[];
-    # I've restricted this to library_types which exactly match Duplex-Seq
-    # to exclude the old library_type 'Bidirectional Duplex-seq'.
-    my $mdm =  ($lt eq q[Duplex-Seq]) ? q(duplexseq) : $self->$orig($product);
+    # I've restricted this to library_types which exactly match Duplex-Seq to exclude the old library_type Bidirectional Duplex-seq
+    # the Duplex-Seq library prep has been replaced by the NanoSeq library prep, the analysis is the same and the Duplex-Seq library_type is still in use
+    # I've added two new library_types Targeted NanoSeq Pulldown Twist and Targeted NanoSeq Pulldown Agilent
+    my $mdm =  ($lt eq q[Duplex-Seq] || $lt =~ /^Targeted NanoSeq Pulldown/sm) ? q(duplexseq) : $self->$orig($product);
     $mdm or $self->logcroak('markdup method is not defined for a product');
 
     return $mdm;
